--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -8601,3 +8601,9 @@ input, select, textarea {
 			#wrapper.divided > .invert:first-child {
 				box-shadow: none !important;
 			}
+
+/* Custom css */
+
+.hide, .spotlight.style1.hide {
+	display: none;
+}
